# shaper

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.orig  CPPLINT.cfg  README  buildNewGEOM.bat  buildNewGEOM_deb.bat  buildNewGEOM_eclipse.bat  buildNewGEOM_rel.bat  build_Salome740_deb.bat  build_Salome_deb.bat  build_Salome_eclipse.bat  build_Salome_rel.bat  build_vc9_Salome_deb.bat  build_vc9_Salome_rel.bat  centos6_env.sh  checkCodingStyle.sh  commands.gdb  config.sh  correction_auto_2.py  cpplint.cfg  eclipse.sh  eclipse_centos.sh  eclipse_d6.sh  eclipse_d8.sh  eclipse_debian.sh  eclipse_salome.sh  env.bat  env.sh  env_Salome.bat  env_lcov.sh  env_linux.sh  env_salome.sh  env_squish.sh  env_standalone.sh  findDOSfiles.sh  findEndLines.sh  find_duplicated_images.sh  fixDOSfiles.sh  (+40 more)
doc/: CMakeLists.txt  Modules.doc  doxyfile.in  first_feature_help.doc  general_architecture.doc
doc/Shaper/: general_architecture.doc
doc/gui/: CMakeLists.txt  Introduction.rst  Makefile  TUI_scripts.rst.in  TUI_tutorial.rst  Tutorial.rst  build_index.py  conf.py.in  index.html  index.rst  index.rst.in  make.bat  tutorial.py
doc/swig/: doxyfile.in
doc/tui/: CMakeLists.txt  Modules.doc  doxyfile.in  first_feature_help.doc  index.doc
src/BuildAPI/: BuildAPI.h  BuildAPI.i  BuildAPI_CompSolid.cpp  BuildAPI_CompSolid.h  BuildAPI_Compound.cpp  BuildAPI_Compound.h  BuildAPI_Edge.cpp  BuildAPI_Edge.h  BuildAPI_Face.cpp  BuildAPI_Face.h  BuildAPI_Filling.cpp  BuildAPI_Filling.h  BuildAPI_Interpolation.cpp  BuildAPI_Interpolation.h  BuildAPI_Polyline.cpp  BuildAPI_Polyline.h  BuildAPI_Shell.cpp  BuildAPI_Shell.h  BuildAPI_Solid.cpp  BuildAPI_Solid.h  BuildAPI_SubShapes.cpp  BuildAPI_SubShapes.h  BuildAPI_Vertex.cpp  BuildAPI_Vertex.h  BuildAPI_Wire.cpp  BuildAPI_Wire.h  BuildAPI_swig.h  CMakeLists.txt
src/BuildPlugin/: BuildPlugin.h  BuildPlugin_CompSolid.cpp  BuildPlugin_CompSolid.h  BuildPlugin_Compound.cpp  BuildPlugin_Compound.h  BuildPlugin_Edge.cpp  BuildPlugin_Edge.h  BuildPlugin_Face.cpp  BuildPlugin_Face.h  BuildPlugin_Filling.cpp  BuildPlugin_Filling.h  BuildPlugin_Interpolation.cpp  BuildPlugin_Interpolation.h  BuildPlugin_Plugin.cpp  BuildPlugin_Plugin.h  BuildPlugin_Polyline.cpp  BuildPlugin_Polyline.h  BuildPlugin_Shape.cpp  BuildPlugin_Shape.h  BuildPlugin_Shell.cpp  BuildPlugin_Shell.h  BuildPlugin_Solid.cpp  BuildPlugin_Solid.h  BuildPlugin_SubShapes.cpp  BuildPlugin_SubShapes.h  BuildPlugin_Validators.cpp  BuildPlugin_Validators.h  BuildPlugin_Vertex.cpp  BuildPlugin_Vertex.h  BuildPlugin_Wire.cpp  BuildPlugin_Wire.h  BuildPlugin_msg_en.ts  BuildPlugin_msg_fr.ts  CMakeLists.txt  compound_widget.xml  compsolid_widget.xml  edge_widget.xml  face_widget.xml  filling_widget.xml  interpolation_widget.xml  (+8 more)
src/CollectionAPI/: CMakeLists.txt  CollectionAPI.h  CollectionAPI.i  CollectionAPI_Field.cpp  CollectionAPI_Field.h  CollectionAPI_Group.cpp  CollectionAPI_Group.h  CollectionAPI_GroupAddition.cpp  CollectionAPI_GroupAddition.h  CollectionAPI_GroupIntersection.cpp  CollectionAPI_GroupIntersection.h  CollectionAPI_GroupShape.cpp  CollectionAPI_GroupShape.h  CollectionAPI_GroupSubstraction.cpp  CollectionAPI_GroupSubstraction.h
src/CollectionPlugin/: CMakeLists.txt  CTestTestfileInstall.cmake  CollectionPlugin.h  CollectionPlugin_Field.cpp  CollectionPlugin_Field.h  CollectionPlugin_Group.cpp  CollectionPlugin_Group.h  CollectionPlugin_GroupAddition.cpp  CollectionPlugin_GroupAddition.h  CollectionPlugin_GroupIntersection.cpp  CollectionPlugin_GroupIntersection.h  CollectionPlugin_GroupMerge.cpp  CollectionPlugin_GroupMerge.h  CollectionPlugin_GroupOperation.cpp  CollectionPlugin_GroupOperation.h  CollectionPlugin_GroupShape.cpp  CollectionPlugin_GroupShape.h  CollectionPlugin_GroupSubstraction.cpp  CollectionPlugin_GroupSubstraction.h  CollectionPlugin_Plugin.cpp  CollectionPlugin_Plugin.h  CollectionPlugin_Validators.cpp  CollectionPlugin_Validators.h  CollectionPlugin_WidgetCreator.cpp  CollectionPlugin_WidgetCreator.h  CollectionPlugin_WidgetField.cpp  CollectionPlugin_WidgetField.h  CollectionPlugin_msg_en.ts  CollectionPlugin_msg_fr.ts  group_addition_widget.xml  group_intersection_widget.xml  group_substraction_widget.xml  group_widget.xml  plugin-Collection.xml  tests.set
src/Config/: CMakeLists.txt  Config.h  ConfigAPI.i  Config_AttributeMessage.cpp  Config_AttributeMessage.h  Config_Common.cpp  Config_Common.h  Config_DataModelReader.cpp  Config_DataModelReader.h  Config_FeatureMessage.cpp  Config_FeatureMessage.h  Config_FeatureReader.cpp  Config_FeatureReader.h  Config_Keywords.h  Config_Message.cpp  Config_Message.h  Config_ModuleReader.cpp  Config_ModuleReader.h  Config_PluginMessage.cpp  Config_PluginMessage.h  Config_PointerMessage.cpp  Config_PointerMessage.h  Config_Prop.cpp  Config_Prop.h  Config_PropManager.cpp  Config_PropManager.h  Config_SelectionFilterMessage.cpp  Config_SelectionFilterMessage.h  Config_Translator.cpp  Config_Translator.h  Config_ValidatorMessage.cpp  Config_ValidatorMessage.h  Config_ValidatorReader.cpp  Config_ValidatorReader.h  Config_WidgetAPI.cpp  Config_WidgetAPI.h  Config_WidgetMessage.cpp  Config_WidgetMessage.h  Config_WidgetReader.cpp  Config_WidgetReader.h  (+11 more)
src/ConnectorAPI/: CMakeLists.txt  ConnectorAPI.h  ConnectorAPI.i  ConnectorAPI_Connector.cpp  ConnectorAPI_Connector.h  ConnectorAPI_swig.h
src/ConnectorPlugin/: CMakeLists.txt  ConnectorPlugin.py  ConnectorPlugin_ExportFeature.py  ConnectorPlugin_PublishToStudyFeature.py  ConnectorPlugin_msg_fr.ts  ExtrusionToMesh.py  plugin-Connector.xml
src/ConstructionAPI/: CMakeLists.txt  ConstructionAPI.h  ConstructionAPI.i  (+8 more)
test.hdfs/: BearingSeparator.hdf  BearingSeparator.py  CMakeLists.txt  CTestTestfileInstall.cmake  CuveN4_Tubulures.py  Sketch_MiddlePoint_9_10.hdf  Sketch_MiddlePoint_9_10.py  Test20456.py  Test2971.py  Test3061.hdf  Test3061.py  Test3139.hdf  Test3139.py  Test40160_NoName.hdf  Test40160_NoName.py  __main__.py  delta_p.py  horseshoe.py  roselend.py  te_fluide.py  te_solide.py  test.py  test_hdf.py  testme.py  tests.set  tests.set.in  usine.py
(+4845 files in other folders)
