# Copyright (C) 2007-2014  CEA/DEN, EDF R&D, OPEN CASCADE

FIND_PROGRAM(DOXYGEN_EXECUTABLE Doxygen)

CONFIGURE_FILE(doxyfile.in
               "${CMAKE_CURRENT_BINARY_DIR}/doxyfile"
               IMMEDIATE @ONLY)

ADD_CUSTOM_TARGET(usr_docs ${DOXYGEN_EXECUTABLE})

INSTALL(CODE "EXECUTE_PROCESS(COMMAND \"${CMAKE_COMMAND}\" --build ${PROJECT_BINARY_DIR} --target usr_docs)")
INSTALL(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/tui DESTINATION doc)
