# Copyright (C) 2007-2014  CEA/DEN, EDF R&D, OPEN CASCADE

SET(HTML_RESOURCES
  index.html
)

ADD_CUSTOM_TARGET(usr_docs
    SOURCES ${HTML_RESOURCES}
    WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/doc/gui"
)
INSTALL(FILES ${HTML_RESOURCES} DESTINATION ${SHAPER_INSTALL_GUI_DOC} OPTIONAL)

INSTALL(CODE "EXECUTE_PROCESS(COMMAND \"${CMAKE_COMMAND}\" --build ${PROJECT_BINARY_DIR} --target usr_docs)")
