# Copyright (C) 2007-2014  CEA/DEN, EDF R&D, OPEN CASCADE

IF (WIN32)
  FIND_PROGRAM(DOXYGEN_EXECUTABLE Doxygen)
ELSE (WIN32)
  FIND_PROGRAM(DOXYGEN_EXECUTABLE doxygen)
ENDIF(WIN32)

IF(HAVE_SALOME)
  SET(EXCLUDE_DOC_DIR "*/AppElements/* */OpenParts/*")
ELSE(HAVE_SALOME)
  SET(EXCLUDE_DOC_DIR "*/Shaper/*")
ENDIF(HAVE_SALOME)

CONFIGURE_FILE(doxyfile.in
               "${CMAKE_CURRENT_BINARY_DIR}/doxyfile"
               IMMEDIATE @ONLY)

ADD_CUSTOM_TARGET(INSTALL_TUI_DOCS
    COMMAND "${DOXYGEN_EXECUTABLE}"
    COMMAND "${CMAKE_COMMAND}" --build "${PROJECT_BINARY_DIR}" --target install --config ${CMAKE_BUILD_TYPE}
    WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/doc/tui"
)
INSTALL(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/tui/ DESTINATION ${SHAPER_INSTALL_TUI_DOC} OPTIONAL)
